# Doodle-Thrive

./: .dockerignore  .gitignore  README.md  api-console.sh  api-server.bash  api-server.bat  api-server.sh  api-tests.bash  api-tests.sh  base-client.bash  base-client.sh  base-server.bash  base-server.bat  base-server.sh  base-tests.sh  docker-compose.yml  run-everything.bash  run_everything.bash  website.bash
api/: Dockerfile  README.md  package.json
api/lib/: tcp.js
api/src/: app.js
api/tests/: Dockerfile  files.test.js  permissions.test.js  search.test.js  tokens.test.js  users.test.js
base/: Dockerfile  README.md
base/src/server/: CMakeLists.txt  main.cpp  server.cpp  server.h
base/tests/: Dockerfile  add.test.cpp  cd.test.cpp  delete.test.cpp  get.test.cpp  rle.test.cpp  search.test.cpp  splitter.test.cpp  tests_delete.cpp  tests_rle.cpp  tests_splitter.cpp
phone/: .dockerignore  Dockerfile  app.json  jsconfig.json  package.json
phone/app/: _layout.js
src/: CMakeLists.txt  Dockerfile  add.cpp  add.h  cli.cpp  get.cpp  get.h  main.cpp  rle.cpp  rle.h  rle_fstream.cpp  rle_fstream.h  search.cpp
src/client/: CMakeLists.txt  Dockerfile.py  ThreadPool.cpp  cppClient.cpp  cppClient.h  main.cpp  pyClient.py
src/core/: ThreadForEveryRunnable.cpp  ThreadPool.h  cd.cpp  cd.h  cli.h  executor.cpp  executor.h  get.h  (+9 more)
tests/: CMakeLists.txt  Dockerfile  add_file_test.cpp  main.cpp  tests_add.cpp  tests_cd  tests_cd.cpp  tests_cli.cpp  tests_delete.cpp  tests_get.cpp  tests_rle.cpp  tests_search.cpp  tests_splitter.cpp
web/: Dockerfile  package.json
(+396 files in other folders)
